2008-10-14  Donal K. Fellows  <dkf@users.sf.net>

	Various minor fixes (ported from Tcl HEAD) to prepare for 0.6 release.
	* generic/tclOO.c (Tcl_ObjectContextInvokeNext): Added gracefulness in
	the face of interpreters being deleted.
	* generic/tclOO.c (InitFoundation):	Use INT2PTR/PTR2INT macros
	* generic/tclOODefineCmds.c (many):	instead of somewhat dodgy
	* generic/tclOOCall.c (TclOOGetSortedMethodList): casts.
	(TclOOGetSortedClassMethodList):
	* generic/tclOOBasic.c (TclOOSelfObjCmd): Clean up of code of [self]
	command to use names from Foundation. Don't write directly to the
	interpreter result object.
	(TclOO_Object_LinkVar): Application of the "do nothing gracefully"
	principle.
	* generic/tclOOInfo.c (various): Don't write directly to the
	interpreter result object.

	* generic/tclOOInt.h: Added macro magic to make things work with
	Objective C. [Bug 2163447]

2008-10-10  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclOODefineCmds.c (TclOODefineUnexportObjCmd)
	(TclOODefineExportObjCmd): Corrected export/unexport record synthesis.
	[Bug 2155658]

2008-09-25  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclOOCall.c (InitCallChain, IsStillValid):
	* tests/oo.test (oo-25.2): Revise call chain cache management so that
	it takes into account class-wide caching correctly. [Bug 2120903]

2008-09-24  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclOOMethod.c (DBPRINT): Remove obsolete debugging macro.
	[Bug 2124814]

2008-09-23  Donal K. Fellows  <dkf@users.sf.net>

	* doc/Method.3: Corrected documentation. [Patch 2082450]

2008-09-22  Donal K. Fellows  <dkf@users.sf.net>

	* configure.in, README.txt, generic/tclOO.h, win/TclOO.rc: Bump
	version to 0.6a1.

	IMPLEMENTATION OF TIP#320.

	* generic/tclOODefineCmds.c (TclOODefineVariablesObjCmd):
	* generic/tclOOInfo.c (InfoObjectVariablesCmd, InfoClassVariablesCmd):
	* generic/tclOOMethod.c (TclOOSetupVariableResolver, etc):
	* doc/define.n, doc/ooInfo.n, benchmarks/cps.tcl: