@@ -1,6 +1,6 @@
-# $Id: configure.in,v 1.38 2008/09/22 10:47:24 dkf Exp $
+# $Id: configure.in,v 1.39 2008/10/14 08:15:45 dkf Exp $
 
-AC_REVISION($Revision: 1.38 $)
+AC_REVISION($Revision: 1.39 $)
 dnl#
 dnl# When changing the version number, you *must* change the following:
 dnl#	generic/tclOO.h, tests/oo.test
@@ -8,7 +8,7 @@ dnl#
 dnl# You should also change the following:
 dnl#	README.txt, win/TclOO.rc
 dnl#
-AC_INIT([TclOO],[0.6a1])
+AC_INIT([TclOO],[0.6])
 AC_CONFIG_AUX_DIR(tclconfig)
 AC_CONFIG_HEADERS(config.h)
 
