@@ -7,9 +7,9 @@
 # See the file "license.terms" for information on usage and redistribution of
 # this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: oo.test,v 1.36 2008/10/10 13:07:30 dkf Exp $
+# RCS: @(#) $Id: oo.test,v 1.37 2008/10/14 08:15:45 dkf Exp $
 
-package require TclOO 0.6a1 ;# Must match value in configure.in
+package require TclOO 0.6 ;# Must match value in configure.in
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest 2
     namespace import -force ::tcltest::*
