@@ -6,8 +6,8 @@
 
 LANGUAGE 0x9, 0x2
 VS_VERSION_INFO VERSIONINFO
-    FILEVERSION		0,6,ALPHA,1
-    PRODUCTVERSION	0,6,ALPHA,1
+    FILEVERSION		0,6,RELEASE,0
+    PRODUCTVERSION	0,6,RELEASE,0
     FILEFLAGSMASK	0x3fL
 #ifdef DEBUG
     FILEFLAGS	 	VS_FF_DEBUG
