@@ -1,5 +1,8 @@
 2008-10-14  Donal K. Fellows  <dkf@users.sf.net>
 
+	* configure.in, README.txt, win/TclOO.rc: Bump version.
+	* generic/tclOO.h (TCLOO_VERSION):
+
 	Various minor fixes (ported from Tcl HEAD) to prepare for 0.6 release.
 	* generic/tclOO.c (Tcl_ObjectContextInvokeNext): Added gracefulness in
 	the face of interpreters being deleted.
